Add rcsfpreview CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ add_subdirectory("src/appl/rangular90")
 add_subdirectory("src/appl/rbiotransform90")
 add_subdirectory("src/appl/rci90")
 add_subdirectory("src/appl/rcsfgenerate90")
+add_subdirectory("src/appl/rcsfpreview90")
 add_subdirectory("src/appl/rcsfinteract90")
 add_subdirectory("src/appl/rcsfzerofirst90")
 add_subdirectory("src/appl/rhfs90")
